<resources>
    <string name="app_name">KiddleApp</string>
    <string name="beranda">Beranda</string>
    <string name="murid">Murid</string>
    <string name="sekolah">Sekolah</string>
    <string name="pembayaran">Pembayaran</string>
    <string name="pengaturan">Pengaturan</string>
    <string name="selamat_datang">Selamat datang,</string>
    <string name="apa_keperluanmu">Apa keperluanmu?</string>
    <string name="pengumuman">Pengumuman</string>
    <string name="penjelasan_keperluan">Semua perkembangan siswa harus direkap setiap hari</string>
    <string name="presensi_siswa">Presensi\nSiswa</string>
    <string name="jurnal_harian">Jurnal\nHarian</string>
    <string name="tugas_tambahan">Tugas\nTambahan</string>
    <string name="data_rapor">Data\nRapor</string>
    <string name="penjelasan_pengumuman">Jangan sampai ketinggalan informasi sekolah terbaru</string>
    <string name="ubah">Ubah</string>
    <string name="hapus">Hapus</string>
    <string name="kelas">Kelas</string>
    <string name="tempat_tanggal_lahir">Tempat Tanggal Lahir</string>
    <string name="alamat">Alamat</string>
    <string name="orang_tua">Orang Tua</string>
    <string name="semester">Semester</string>
    <string name="rapor">Rapor</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="selamat_datang_login">Selamat Datang</string>
    <string name="nomor_induk_pegawai">Nomor Induk Pegawai</string>
    <string name="perlu_bantuan">Perlu bantuan?</string>
    <string name="image_icon_kiddle">Image Icon Kiddle</string>
    <string name="image_illustration_login_admin">Image Illustration Login Admin</string>
    <string name="masuk">MASUK</string>
    <string name="title_dialog_bantuan_login">Cara mendapatkan ID dan Password</string>
    <string name="message_dialog_bantuan_login">ID Guru dan Kata Sandi didapatkan dengan menghubungi staf Tata Usaha atau datang ke sekolah</string>
    <string name="positive_button_dialog">OK</string>
    <string name="image_onboarding">Image OnBoarding</string>
    <string name="title_onboarding_fragment">Title OnBoarding Fragment</string>
    <string name="presensi">Presensi</string>
    <string name="description_onboarding">Description Onboarding</string>
    <string name="jumlah_pembayaran">Jumlah :</string>
    <string name="simpan">Simpan</string>
    <string name="masukkan_judul">Masukkan judul</string>
    <string name="masukkan_jumlah">Masukkan jumlah</string>
    <string name="pilih_tanggal_tenggat_waktu">Pilih tanggal tenggat waktu</string>
    <string name="tanggal_spp">Tanggal SPP</string>
    <string name="jumlah_spp">Rp. 330000</string>
    <string name="value_jumlah_pembayaran">Rp. 330000</string>
    <string name="batas_pembayaran">Batas Pembayaran</string>
    <string name="value_tanggal_detail_bayar">10 Maret 2020</string>
    <string name="ubah_pembayaran">Ubah pembayaran</string>
    <string name="jumlah_yang_lunas">Jumlah yang lunas</string>
    <string name="contoh_nama_murid">Lee Ji Eun</string>
    <string name="value_tanggal">Value tanggal</string>
    <string name="contoh_bulan">Maret 2020</string>
    <string name="bukti_pembayaran">Bukti Pembayaran</string>
    <string name="terima">Terima</string>
    <string name="tolak">tolak</string>
    <string name="bulan">Bulan</string>
    <string name="jumlah">Jumlah</string>
    <string name="value_bulan_konfirm">April 2020</string>
    <string name="value_jumlah_konfirm">Rp 330.000</string>
    <string name="status">Status</string>
    <string name="value_status_konfirm">Belum dikonfirmasi</string>
    <string name="pembayaran_spp">Pembayaran SPP</string>
    <string name="image_banner_spp">Image Banner SPP</string>
    <string name="pilih_tanggal">Pilih tanggal</string>
    <string name="libur">libur</string>
    <string name="selanjutnya">selanjutnya</string>
    <string name="tanggal_presensi">Jum\'at 26 Juni 2020</string>
    <string name="hadir">Hadir</string>
    <string name="sakit">Sakit</string>
    <string name="izin">Izin</string>
    <string name="alpha">Alpha</string>
    <string name="nama_anak">Nama anak</string>
    <string-array name="title_fragment_onboarding">
        <item>Presensi Murid</item>
        <item>Jurnal Kegiatan</item>
        <item>Pembayaran SPP</item>
        <item>Rapor Murid</item>
    </string-array>
    <string name="lihat_semua">Lihat Semua</string>
    <string name="lorem_ipsum">"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc vitae tellus feugiat, efficitur lacus nec, maximus felis. Maecenas ultrices tempor enim, et malesuada nisl lacinia eget. Integer arcu sapien, interdum nec neque sit amet, volutpat porta massa. Ut convallis purus lacus, ac tempor orci placerat vitae. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Nullam eu ipsum consequat, imperdiet nibh sit amet, imperdiet risus. Vestibulum a nunc sapien. Sed velit ipsum, fermentum non mi ac, scelerisque pharetra ligula."</string>
    <string name="deskripsi_profil_sekolah">Profil sekolah beserta visi misi, fasilitas dan prestasi yang pernah diraih</string>
    <string name="deskripsi_list_guru">Siapa saja guru yang menjadi partner anda di sekolah</string>
    <string name="deskripsi_kegiatan">Pada hari tertentu sekolah mengadakan kegiatan menarik</string>

    <string name="tugas">Tugas</string>
    <string name="kegiatan">Kegiatan</string>
    <string name="parenting">Parenting</string>
    <string name="jurnal">Jurnal</string>
    <string name="materi">Materi</string>
    <string name="isitugas">Kerjakan Soal pada akhir video</string>
    <string name="aspek">Aspek</string>
    <string name="deskrpsi">Deskripsi</string>
    <string name="tenggat_waktu">Tenggat Waktu</string>
    <string name="tanggal">Tanggal</string>
    <string name="jam">Jam</string>
    <string name="sisipkan">Sisipkan</string>
    <string name="judul">Judul</string>
    <string name="helper_tanggal">Gunakan icon untuk input tanggal</string>
    <string name="helper_waktu">Gunakan icon untuk input jam</string>
    <string name="lorem_ipsum2">"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc vitae tellus feugiat, efficitur lacus nec, maximus felis.</string>
    <string name="image_detail">Gambar Ilustrasi</string>
    <string name="image_back">Image Back</string>
    <string name="icon_more">Icon More</string>
    <string name="contoh_nip">19802003</string>
    <string name="contoh_kelas">Bintang Kecil</string>
    <string name="contoh_tanggal_lahir">Bandung, 2 Mei 1999</string>
    <string name="contoh_alamat">Jl. Watugong No.17F</string>
    <string name="ayah">Ayah:</string>
    <string name="contoh_ayah">Budi</string>
    <string name="contoh_kontak_ayah">081234567</string>
    <string name="ibu">Ibu:</string>
    <string name="contoh_ibu">Siti</string>
    <string name="contoh_kontak_ibu">081234567</string>
    <string name="password">Password</string>
    <string name="contoh_password">mangga123</string>
    <string name="lihat_rapor">Lihat Rapor</string>
    <string name="rekapan_presensi">Rekapan Presensi</string>
    <string name="icon_telepon">Icon Telepon</string>
    <string name="kognitif">Kognitif</string>
    <string name="bintang_a">Bintang A</string>
    <string name="contoh_tanggal_jurnal">20 Juni 2020</string>
    <string name="keterampilan">Keterampilan</string>
    <string name="image_link_detail">Image Link Detail</string>
</resources>