<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Onboarding.OnBoardingFragment">


    <ImageView
        android:id="@+id/iv_onboarding"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_marginTop="52dp"
        android:contentDescription="@string/image_onboarding"
        android:scaleType="fitXY"
        android:src="@drawable/ic_launcher_background" />

    <TextView
        android:id="@+id/title_onboarding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_onboarding_fragment"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="36sp" />

    <TextView
        android:id="@+id/tv_description_onboarding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/description_onboarding"
        android:textAlignment="center"
        android:textSize="18sp" />

</LinearLayout>